--- a/config/config.json
+++ b/config/config.json
@@ -1,13 +1,13 @@
 {
   "site": {
-    "title": "Geeky Nextjs",
+    "title": "TopTenProducts",
     "base_url": "/",
-    "favicon": "/images/favicon.png",
-    "logo": "/images/logo.png",
-    "logo_white": "/images/logo-light.png",
-    "logo_width": "150",
+    "favicon": "/images/logo.png",
+    "logo": "/images/favicon.png",
+    "logo_white": "/images/logo.png",
+    "logo_width": "120",
     "logo_height": "39",
-    "logo_text": "Geeky"
+    "logo_text": "Logo TTP"
   },
   "settings": {
     "theme_switcher": true,
@@ -26,28 +26,28 @@
     "copyright": "Designed and Developed By [Statichunt](https://statichunt.com/)"
   },
   "metadata": {
-    "meta_author": "Statichunt",
+    "meta_author": "Larson",
     "meta_image": "/images/og-image.png",
-    "meta_description": "Geeky Nextjs Personal Blog Template"
+    "meta_description": "Blog de Productos"
   },
   "widgets": {
     "about": {
       "enable": true,
-      "content": "Lorem ipsum dolor sit amet, conse tfctetur adipiscing elit. Vel in in donec iaculis tempasus odio nunc laoreet . Libero ullam rgscorper."
+      "content": "Puedes comunicarte con nosotros por medio de las siguientes redes sociales"
     },
     "featured_posts": {
       "enable": true,
-      "title": "Blog Categories",
+      "title": "Categorias del blog",
       "showPost": 3
     },
     "categories": {
       "enable": true,
-      "title": "Blog Categories"
+      "title": "Categorias del blog"
     },
     "newsletter": {
       "enable": true,
-      "title": "Newsletter",
-      "content": "Join thousands of Tiny Salt subscribers and get our best recipes delivered each week!",
+      "title": "Suscribete",
+      "content": "Enterate de las publicaciones mas recientes aqui",
       "privacy_policy_page": "#",
       "malichipm_url": ""
     }
