--- a/config/config.json
+++ b/config/config.json
@@ -22,8 +22,8 @@
   },
   "params": {
     "tag_manager_id": "",
-    "footer_content": "Lorem ipsum dolor sit amt, conse adip iscing. donec iaculis tempasus laoreet. Libero ullam rgscper.",
-    "copyright": "Designed and Developed By [Statichunt](https://statichunt.com/)"
+    "footer_content": "Explora el blog cuando quieras y donde desees",
+    "copyright": "Adaptación de un proyecto de StaticHunt"
   },
   "metadata": {
     "meta_author": "Larson",
