--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "disqus-react": "^1.1.5",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
@@ -27,7 +28,8 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "sonner": "^1.0.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
