--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "aos": "^3.0.0-beta.6",
     "disqus-react": "^1.1.5",
     "github-slugger": "^2.0.0",
@@ -35,6 +36,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
+    "daisyui": "^3.9.2",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^1.3.7",
     "eslint": "8.32.0",
