--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "marked": "^4.2.12",
     "next": "13.1.5",
     "next-mdx-remote": "^4.3.0",
+    "next-seo": "^6.1.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
